--- a/css/bakerystyles.css
+++ b/css/bakerystyles.css
@@ -44,6 +44,9 @@ p{
 	padding: 0 35px;
 }
 
+#clear{
+	clear: both;
+}
 table{
 	border-collapse: collapse;
 	width: 90%;
@@ -59,11 +62,15 @@ caption{
 	font-size: 160%;
 }
 
+h3 {
+	padding: 0 35px;
+}
+
 #sidebar{
 	float: right;
-	width: 350px;
-	padding: 15px 8px 8px 20px;
-	margin:  20px;
+	width: 200px;
+	padding: 25px 50px 8px 20px;
+	margin:  70px;
 	border: 1.5px solid #000;
 }
 
